<resources>
    <string name="app_name">Republic</string>
    <string name="wait_network">Ожидание сети…</string>
    <string name="error_timeout">Плохое интернет соединение</string>
    <string name="error_server">Ошибка на сервере, пожалуйста напишите в тех поддержку \n heckslam@yandex.ru</string>
    <string name="no_network">Нет интернет подключения</string>
    <string name="share_title">Поделиться</string>
    <string name="fav_title">В избранные</string>
    <string name="toolbar_favorite_snack">Добавлено в избранные</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>

    <!-- menu items -->
    <string name="menu_item_category">Предложить услугу</string>
    <string name="menu_item_excursions">Экскурсии</string>
    <string name="menu_item_home">Главная</string>
    <string name="menu_item_places">Все места</string>
    <string name="menu_item_eat">Где поесть</string>
    <string name="menu_item_sleep">Где поспать</string>


    <string name="enableSplash">Заставка при запуске</string>
    <string name="enableAnimation">Анимация</string>
    <string name="menu_item_settings">Настройки</string>

    <string name="sort_by_place">Место отдыха</string>
    <string name="sort_by_rest">Вид отдыха</string>
    <string name="sort_by">Быстрый поиск</string>
    <string name="dialog_ok">ОК</string>
    <string name="dialog_ok_settings">Перезапустить</string>
    <string name="dialog_cancel">Отмена</string>

    <string name="settings_title">Основные</string>
    <string name="activity_settings_title">Настройки</string>
    <string name="select_theme">Тема</string>
    <string name="apply_settings_dialog">Чтобы настройки вступили в силу, необходимо перезапустить приложение</string>
    <string-array name="entries">
        <item>Зеленая</item>
        <item>Оранжевая</item>
        <item>Фиолетовая</item>
        <item>Сине-серая</item>
    </string-array>

    <string-array name="entries_value">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="no_places_filtered">Мест по данному запросу пока нет</string>


    <!-- Табы -->
    <string name="tab_popular">Популярные</string>
    <string name="tab_mine">Избранные</string>
    <string name="tab_places">Места</string>
    <string name="tab_where_eat">Где поесть</string>
    <string name="tab_where_sleep">Где поспать</string>
    <string name="error_auth">Ошибка аутентификации на сервере</string>
    <string name="title_activity_maps">Map</string>
    <string name="clickMarker">Нажмите на красный маркер, чтобы открыть место в Google Карты</string>
    <string name="howtogo">Как добраться</string>
    <string name="finalPrice">Примерная стоимость поездки:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
