<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:title="@string/menu_item_home"
        android:orderInCategory="1"
        android:icon="@drawable/ic_home_black_24dp"/>

    <item
        android:id="@+id/deep_search"
        android:title="@string/menu_item_category"
        android:orderInCategory="1"
        android:icon="@drawable/ic_chat_bubble_black_24dp"/>

    <item
        android:id="@+id/excursions"
        android:title="@string/menu_item_excursions"
        android:orderInCategory="1"
        android:icon="@drawable/ic_explore_black_24dp"/>

    <item
        android:id="@+id/places"
        android:title="@string/menu_item_places"
        android:orderInCategory="1"
        android:icon="@drawable/map_marker"/>


    <item
        android:id="@+id/eat"
        android:title="@string/menu_item_eat"
        android:orderInCategory="1"
        android:icon="@drawable/ic_restaurant_menu_black_24dp"/>

    <item
        android:id="@+id/sleep"
        android:title="@string/menu_item_sleep"
        android:orderInCategory="1"
        android:icon="@drawable/ic_hotel_black_24dp"/>

    <item
        android:id="@+id/settings"
        android:title="@string/menu_item_settings"
        android:orderInCategory="1"
        android:icon="@drawable/ic_settings"/>

</menu>