<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_frame">

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app = "http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground"
        android:fitsSystemWindows="true">


        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container">


            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/appBar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_scrollFlags="scroll|enterAlways"/>

            </android.support.design.widget.AppBarLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="60dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings_title"
                    android:id="@+id/textView3"
                    android:textSize="13dp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginBottom="10dp"
                    />
                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enableSplash"
                    android:layout_marginLeft="4dp"
                    android:textSize="14dp"
                    android:id="@+id/switchSplash"
                    android:layout_below="@+id/textView3"/>

                <android.support.v7.widget.SwitchCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enableAnimation"
                    android:layout_marginLeft="4dp"
                    android:textSize="14dp"
                    android:id="@+id/switchAnimation"
                    android:layout_below="@+id/switchSplash"/>


            </RelativeLayout>
        </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>

</FrameLayout>
